<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart</string>
    <string name="menu_settings">Settings</string>
    <string name="infoSettings">Information parameters</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="altitude">Altitude :</string>
    <string name="accuracy">Accuracy :</string>
    <string name="speed">Speed :</string>
    <string name="bearing">Bearing :</string>
    <string name="centerMap">Recentering the map</string>
    <string name="findGPS">Finding GPS signal..</string>
    <string name="gpsSettings">GPS settings</string>
    <string name="gpsMessage">	This application required GPS.\nYou should activate it.\nYou can also activated it by setting menu.</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="hideInfoZone">Hide information</string>
    <string name="showInfoZone">Show information</string>
    <string name="exit">Exit ?</string>
    <string name="exitMsg">Are you sure you want to quit SMART ?</string>
    <string name="help">Help</string>
    <string name="helpLayer">This is the layer menu.\nYou can unchecked a layer to hide it or slide to remove it.\nTo reorganize, long pressed on a layer to drag and grop in the list.\nTo modify a symbology, select a picture.</string>
    <string name="helpMap">This is the Map screen.\nYou can move the map by dragging with your finger.\nTo zoom in or out, pinch or spread the screen.\nIf your GPS was activated, touch the target icon to locate your position on the map.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="option">Option</string>
    <string name="addShortcut">Add shortcut</string>
    <string name="removeShortcut">Remove shortcut</string>
    <string name="symbo_desc">Symbologie</string>
    <string name="delete">Delete</string>
    <string name="deleteLayer">Do you really want to remove this layer ?</string>
    <string name="warning">Warning</string>
    <string name="visibilityLayer">You can\'t modify the visibility of this layer, it is link to a mission started.</string>
    <string name="deleteLayerFalse">You can\'t remove this layer, it is link to a mission started.</string>
    <string name="shouldRestartApp">You have to restart the application to apply the change.</string>
    <string name="error">Error</string>
    <string name="kmlParseError">Error. The Kml file is invalid</string>
    <string name="kmlReadError">Error. The Kml file can\'t be read</string>
    <string name="kmlImport">Kml layer import : success</string>
    <string name="geotiffReadError">Error. The GeoTiff repertory can\'t be read</string>
    <string name="geotiffImport">GeoTiff layer import : success</string>
    <string name="shpImport">ShapeFile layer import : success</string>
    <string name="layerAlreadyExists">Layer already exists</string>

    <string-array name="items">
        <item>Start mission</item>
        <item>Create form</item>
        <item>Point survey</item>
        <item>Position survey</item>
        <item>Line survey</item>
        <item>Polygon survey</item>
        <item>Track GPS</item>
        <item>KML import</item>
        <item>GeoTIFF import</item>
        <item>ShapeFile import</item>
        <item>WMS import</item>
        <item>Export mission</item>
        <item>Distance measure</item>
        <item>Export form</item>
        <item>Delete mission</item>
    </string-array>

    <string name="stopMission">Stop mission</string>
    <string name="stopGPSTrack">Stop track</string>

    <string-array name="typeFields">
        <item>Text</item>
        <item>Numeric</item>
        <item>Boolean</item>
        <item>List</item>
        <item>Picture</item>
        <item>Height</item>
    </string-array>

    <string name="title_activity_layers">LayersActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="zoomIn">Do you really want to zoom in even if tiles are missing?</string>
    <string name="zoomOut">Do you really want to zoom out even if tiles are missing?</string>
    <string name="title_activity_create_form">Create a form</string>
    <string name="zoomTitle">Tiles missing for this zoom level"</string>
    <string name="missionName">Name :</string>
    <string name="selectForm">Form :</string>
    <string name="formBrowser">Select form file</string>
    <string name="mission">Mission</string>
    <string name="export_mission">Export mission</string>
    <string name="delete_mission">Delete mission</string>
    <string name="export_form">Export Form</string>
    <string name="defaultForm">Default</string>
    <string name="othertForm">Other</string>
    <string name="track_text_name">Enter a name for this track</string>
    <string name="track_text_param">Enter a value for the mode selected </string>
    <string name="track_radio_time">Time (s)</string>
    <string name="track_radio_distance">Distance (m)</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="track_name_missing">Must enter a name for the track</string>
    <string name="track_param_missing"> Must enter a param for the mode selected</string>
    <string name="track_param_false">Param must be an integer</string>
    <string name="track_error">Error while stopping track</string>
    <string name="Coms">Comments</string>
    <string name="ComsDefault">Default field : Comments</string>
    <string name="CreateForm">Create Form</string>
    <string name="AddField">Add a new field</string>
    <string name="title_activity_add_fieldto_form">AddFieldtoFormActivity</string>
    <string name="Name">Name</string>
    <string name="List">List</string>
    <string name="form_title">Form</string>
    <string name="MeasureTitle">Measure</string>
    <string name="MeasureRelative">Relative to your position</string>
    <string name="MeasureAbsolute">Beetween two points on the 	 map</string>
    <string name="MeasureRelativeText">Select a point on the map</string>
    <string name="MeasureAbsoluteText">Select two points on the map</string>
    <string name="field_name_already_used">Error : Field name already used</string>
    <string name="field_text">Text field : </string>
    <string name="field_picture">Picture field : </string>
    <string name="field_list">List field : </string>
    <string name="field_boolean">Boolean field : </string>
    <string name="field_numeric">Numeric field : </string>
    <string name="field_height">Height field : </string>
    <string name="field_error_min_max">Error : Min > Max</string>
    <string name="invalid">Invalid</string>
    <string name="sure">Delete mission(s) ?</string>
    <string name="result">Result</string>
    <string name="menuFunctionalitiesTitle">Functionalities menu</string>
    <string name="menuLayersTitle">Layers managing</string>
    <string name="CsvFormat">CSV</string>
    <string name="KmlFormat">KML</string>
    <string name="symbo">Symbology</string>
    <string name="color">Color</string>
    <string name="taille">Size</string>
    <string name="wmsurl">Enter WMS URL </string>
    <string name="wmstitle">Import WMS Layer </string>
    <string name="wms_error">Error while importing wms : url is not reachable</string>
    <string name="wms_name">Enter a name for WMS Layer</string>
    <string name="editInfo">Edit info zone</string>
    <string name="displayLatitude">Display latitude</string>
    <string name="displayLongitude">Display longitude</string>
    <string name="displayAltitude">Display altitude</string>
    <string name="displayAccuracy">Display accuracy</string>
    <string name="displayBearing">Display bearing</string>
    <string name="displaySpeed">Display speed</string>
    <string name="noMission">Impossible : no mission in progress</string>
    <string name="missionStop">Mission stop</string>
    <string name="missionStart">Mission start</string>
    <string name="missionDelete">Mission delete</string>
    <string name="theme">Theme</string>
    <string name="title_activity_height">HeightActivity</string>
    <string name="user_height_text">Enter the height of your Point Of View (usually your height minus 25 cm)</string>
    <string name="track_title">Create a GPS Track</string>
    <string name="height_title"> POV Height</string>
    <string name="height_field_missing"> Height value must be set</string>
    <string name="height_bottom_instructions">Align your eyes,  smartphone and object\'s bottom side in a straight line.\nThen click on the screen.</string>
    <string name="height_top_instructions">Align your eyes,  smartphone and object\'s top side in a straight line.\nThen click on the screen again.</string>
</resources>