<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/latitudeChkbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayLatitude" />

        <CheckBox
            android:id="@+id/longitudeChkbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayLongitude" />

        <CheckBox
            android:id="@+id/altitudeChkbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayAltitude" />

        <CheckBox
            android:id="@+id/accuracyChkbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayAccuracy" />

        <CheckBox
            android:id="@+id/bearingChkbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displayBearing" />

        <CheckBox
            android:id="@+id/speedChkbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/displaySpeed" />
    </LinearLayout>

</ScrollView>